# fastr

./: Cargo.toml  justfile
src/: lib.rs  main.rs
