[package]
name = "fastr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
image = "0.24.7"
nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded"] }
rerun = "0.8.2"
